--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -25,7 +25,15 @@ body {
   border: 0;
   border-radius: 7px;
   width: 135px;
+  padding: 0 1em;
+  margin-bottom: 0.2em;
 }
 .mnemonic {
   margin: auto;
+  padding-left: 0.5em;
+  font-size: 1.2em;
+}
+.mnemonic:hover {
+  color: #3275ba;
+  cursor: pointer;
 }
